infrastructure/base/keycloak/instance/accounts-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: accounts
spec:
  entryPoints:
    - https
  routes:
    - kind: Rule
      match: "Host(`accounts.${BASE_DOMAIN}`)"
      services:
        - name: keycloak
          scheme: https
          serversTransport: accounts
          port: 8443
  tls:
    secretName: accounts-certificate
